<resources>
    <string name="app_name">IDIMS</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="a">Button</string>
    <string name="研究者の方">研究者の方</string>
    <string name="一般の方">一般の方</string>
    <string name="selectArea">地域を選択</string>
    <string name="Hokkaido">北海道</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="made">まで</string>
    <string name="search">検索</string>
    <string name="area">地域</string>
    <string name="content">種類</string>
    <string name="landsride">土砂崩れ</string>
    <string name="wave">津波</string>
    <string name="thounder">雷</string>
    <string name="constant">一定期間</string>
    <string name="free">自由期間</string>
    <string name="kara">から</string>

    <string name="January">1</string>
    <string name="February">2</string>
    <string name="March">3</string>
    <string name="April">4</string>
    <string name="May">5</string>
    <string name="June">6</string>
    <string name="July">7</string>
    <string name="August">8</string>
    <string name="September">9</string>
    <string name="October">10</string>
    <string name="November">11</string>
    <string name="December">12</string>

    <string name="all">全て</string>
    <string name="before1month">過去１か月</string>
    <string name="beforehalfyear">過去半年</string>
    <string name="before1year">過去１年</string>
    <string name="before5year">過去５年</string>
    <string name="Touhoku">東北</string>
    <string name="Kantou">関東</string>
    <string name="Chubu">中部</string>
    <string name="Kinki">近畿</string>
    <string name="ChugokuShikoku">中国・四国</string>
    <string name="Kyushu">九州</string>
    <string name="prefecture_select">都道府県選択</string>
    <string name="region_select">地方選択</string>
    <string name="back">戻る</string>
    <string name="set">設定</string>
    <string name="gps">位置情報</string>
    <string name="user_select">ユーザの選択</string>
    <string name="general">一般の方</string>
    <string name="researcher">研究者の方</string>
    <string name="sensor_list">センサー異常一覧</string>
    <string name="password_chenge">パスワード変更</string>
    <string name="now_password">現在のパスワード</string>
    <string name="input_now_password">現在のパスワードを入力してください</string>
    <string name="new_password">新しいパスワード</string>
    <string name="input_new_password">新しいパスワードを入力してください</string>
    <string name="character＿limit">半角英数字8文字以上・記号不可</string>
    <string name="change">変更</string>
    <string name="researcher_page">研究者ページ</string>
    <string name="sensor_error">センサー異常</string>
    <string name="login">ログイン</string>
    <string name="id">ID</string>
    <string name="input_id">IDを入力してください</string>
    <string name="password">パスワード</string>
    <string name="input_password">パスワードを入力してください</string>
    <string name="area_list">閲覧地域一覧</string>
    <string name="add_area">地域を追加する</string>
    <string name="changeCon">条件を変える</string>
    <string name="searchcondition">検索条件</string>
    <string name="close">閉じる</string>
    <string name="arealist">設定地域一覧</string>
    <string name="configuration">設定</string>
    <string name="howtoapp">アプリについて</string>
    <string name="archive">アーカイブ</string>
    <string name="researcherPage">研究者ページ</string>
    <string name="delete">削除</string>
    <string name="mapGamen">マップ画面</string>
    <string name="menu">メニュー</string>
    <string name="period">期間</string>
    <string name="backMenu">メニューへ戻る</string>
    <string name="notOccureDisaster">24時間以内の災害発生はありません</string>
    <string name="sensorList">センサー異常リスト</string>

    <!-- ここから、災害検索アクティビティのレイアウトファイルで使用するspinnerコンポーネントの配列一覧-->
    <string-array name="spinner_constant">
        <item>過去１か月</item>
        <item>過去半年</item>
        <item>過去１年</item>
        <item>過去５年</item>
        <item>全て</item>
    </string-array>

    <string-array name="spinner_yearStart">
        <item>2021</item>
        <item>2022</item>
    </string-array>

    <string-array name="spinner_yearEnd">
        <item>2021</item>
        <item>2022</item>
    </string-array>

    <string-array name="spinner_monthStart">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>

    <string-array name="spinner_monthEnd">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <!-- ここまで-->

</resources>