<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelectAreaActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="425dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.328"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioGroup
            android:id="@+id/radio_area"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioButton
                android:id="@+id/radioButton_Hokkaido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Hokkaido"
                android:textAlignment="center"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/radioButton_Touhoku"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Touhoku"
                android:textAlignment="center"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/radioButton_Kanto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Kantou"
                android:textAlignment="center"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/radioButton_Chubu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Chubu"
                android:textAlignment="center"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/radioButton_Kinki"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Kinki"
                android:textAlignment="center"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/radioButton_ChugokuShikoku"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ChugokuShikoku"
                android:textAlignment="center"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/radioButton_Kyushu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Kyushu"
                android:textAlignment="center"
                android:textSize="20sp" />
        </RadioGroup>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>