<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".Researcher.ResearcherPageActivity">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="420dp"
        android:layout_height="50dp"
        android:background="#03A9F4"
        android:gravity="center"
        android:text="@string/researcher_page"
        android:textColor="#FBFAFD"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/backActivity"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#03A9F4"
        android:backgroundTint="#03A9F4"
        android:text="@string/back"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:backgroundTint="#03A9F4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/next1Activity"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginBottom="350dp"
        android:background="#454545"
        android:gravity="center"
        android:text="@string/sensorList"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:backgroundTint="#454545"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.561" />

    <Button
        android:id="@+id/next2Activity"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:background="#454545"
        android:gravity="center"
        android:text="@string/password_chenge"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:backgroundTint="#454545"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/next1Activity"
        app:layout_constraintVertical_bias="0.32" />

</androidx.constraintlayout.widget.ConstraintLayout>