<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".Researcher.ChangePasswordActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="420dp"
        android:layout_height="50dp"
        android:background="#03A9F4"
        android:gravity="center"
        android:text="@string/password_chenge"
        android:textColor="#FBFAFD"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />



    <Button
        android:id="@+id/backActivity"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#03A9F4"
        android:backgroundTint="#03A9F4"
        android:text="@string/back"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:backgroundTint="#03A9F4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="27dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="91dp"
        android:layout_marginEnd="194dp"
        android:layout_marginBottom="25dp"
        android:text="@string/now_password"
        android:textColor="#FBFAFD"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/nowPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/nowPassword"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="50dp"
        android:background="#FBFAFD"
        android:ems="10"
        android:hint="@string/input_now_password"
        android:inputType="textPassword"
        android:maxLength="20"
        android:maxLines="1"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:passwordToggleEnabled="true"
        tools:ignore="MissingConstraints" />


    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginEnd="194dp"
        android:layout_marginBottom="20dp"
        android:text="@string/new_password"
        android:textColor="#FBFAFD"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nowPassword"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="146dp"
        android:layout_marginBottom="30dp"
        android:text="@string/character＿limit"
        android:textColor="#FBFAFD"
        app:layout_constraintBottom_toTopOf="@+id/newPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/newPassword"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="51dp"
        android:background="#FBFAFD"
        android:ems="10"
        android:hint="@string/input_new_password"
        android:inputType="textPassword"
        android:maxLength="20"
        android:maxLines="1"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/changePassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:passwordToggleEnabled="true"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/changePassword"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginStart="145dp"
        android:layout_marginEnd="146dp"
        android:layout_marginBottom="186dp"
        android:background="#03A9F4"
        android:backgroundTint="#03A9F4"
        android:text="@string/change"
        android:textColor="#F4F4F4"
        android:textSize="20sp"
        app:backgroundTint="#03A9F4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newPassword"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/toggle_view1"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:clickable="true"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:onClick="toggle1"
        android:scaleType="centerCrop"
        android:src="@drawable/eye_off1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.849"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.301"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageView
        android:id="@+id/toggle_view2"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:clickable="true"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:onClick="toggle2"
        android:scaleType="centerCrop"
        android:src="@drawable/eye_off2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.849"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.583"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/errorText"
        android:layout_width="297dp"
        android:layout_height="66dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="57dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="57dp"
        android:layout_marginBottom="76dp"
        android:gravity="center_horizontal"
        android:textColor="#E91E1E"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/changePassword"
        app:layout_constraintVertical_bias="1.0" />
</androidx.constraintlayout.widget.ConstraintLayout>