<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".Researcher.ChangePasswordActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="420dp"
        android:layout_height="50dp"
        android:background="#03A9F4"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="#FBFAFD"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />


    <TextView
        android:id="@+id/loginError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        android:textAlignment="center"
        android:textColor="#E91E63"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/backActivity"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#03A9F4"
        android:backgroundTint="#03A9F4"
        android:text="@string/back"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:backgroundTint="#03A9F4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/id"
        android:textColor="#FBFAFD"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.142"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.232" />

    <EditText
        android:id="@+id/userId"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:background="#FBFAFD"
        android:ems="10"
        android:hint="@string/input_id"
        android:inputType="text"
        android:maxLength="20"
        android:maxLines="1"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView"
        app:layout_constraintVertical_bias="0.282"
        app:passwordToggleEnabled="true" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textColor="#FBFAFD"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.177"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.468" />

    <EditText
        android:id="@+id/password"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="43dp"
        android:layout_marginBottom="30dp"
        android:background="#FBFAFD"
        android:ems="10"
        android:hint="@string/input_password"
        android:inputType="textPassword"
        android:maxLength="20"
        android:maxLines="1"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:passwordToggleEnabled="true"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/login"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="47dp"
        android:layout_marginEnd="140dp"
        android:layout_marginBottom="191dp"
        android:background="#03A9F4"
        android:backgroundTint="#03A9F4"
        android:text="@string/login"
        android:textColor="#F4F4F4"
        android:textSize="18sp"
        app:backgroundTint="#03A9F4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/toggle_view1"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:clickable="true"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:onClick="toggle1"
        android:scaleType="centerCrop"
        android:src="@drawable/eye_off1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.849"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.557"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/errorText"
        android:layout_width="297dp"
        android:layout_height="66dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="57dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="57dp"
        android:layout_marginBottom="74dp"
        android:gravity="center_horizontal"
        android:textColor="#E91E1E"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>