<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="420dp"
        android:layout_height="50dp"
        android:background="#03A9F4"
        android:gravity="center"
        android:text="@string/set"
        android:textColor="#FBFAFD"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/backActivity"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:backgroundTint="#03A9F4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="414dp"
        android:layout_height="71dp"
        android:background="#454545"
        android:gravity="center"
        android:text="@string/gps"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        app:backgroundTint="#454545"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.193" />

    <Switch
        android:id="@+id/gpsSwitch"
        android:layout_width="75dp"
        android:layout_height="39dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.887"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.215"
        tools:ignore="DuplicateClickableBoundsCheck" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="62dp"
        android:layout_height="66dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.057"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2"
        app:srcCompat="@android:drawable/ic_menu_myplaces" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="98dp"
        android:layout_height="29dp"
        android:layout_marginBottom="444dp"
        android:text="通知設定"
        android:textColor="#FFFFFF"
        android:textSize="23sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="412dp"
        android:layout_height="70dp"
        android:background="#454545"
        android:gravity="center"
        android:text="通知の許可　　"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        app:backgroundTint="#454545"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.446" />

    <Switch
        android:id="@+id/noticeSwitch"
        android:layout_width="75dp"
        android:layout_height="39dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.887"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.447" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="42dp"
        android:layout_height="42dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.075"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.449"
        app:srcCompat="@android:drawable/ic_popup_reminder" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="416dp"
        android:layout_height="71dp"
        android:background="#454545"
        android:gravity="center"
        android:text="アラートの許可　　"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        app:backgroundTint="#454545"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.549" />


    <Switch
        android:id="@+id/alertSwitch"
        android:layout_width="75dp"
        android:layout_height="39dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.887"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.549" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="50dp"
        android:layout_height="46dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/alertSwitch"
        app:layout_constraintHorizontal_bias="0.061"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.554"
        app:srcCompat="@android:drawable/ic_dialog_alert" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="413dp"
        android:layout_height="65dp"
        android:background="#454545"
        android:text="　通知する災害の種類"
        android:textColor="#FFFFFF"
        android:textSize="23sp"
        app:backgroundTint="#454545"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.65" />

    <CheckBox
        android:id="@+id/tsunamiCheckBox"
        android:layout_width="143dp"
        android:layout_height="60dp"
        android:layout_marginBottom="200dp"
        android:background="#454545"
        android:text="津波"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:backgroundTint="#454545"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/landslideCheckBox"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:layout_marginBottom="200dp"
        android:background="#454545"
        android:text="土砂崩れ"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:backgroundTint="#454545"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/thunderCheckBox"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/thunderCheckBox"
        android:layout_width="134dp"
        android:layout_height="60dp"
        android:layout_marginBottom="200dp"
        android:background="#454545"
        android:text="雷"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:backgroundTint="#454545"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>